/***********************************************************************
X3 ChangeLog

2008-12-24  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Fix for SF bug #2401693 (gsync not working properly).

2008-11-30  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/spamserv.c: Fix crash bug in ADDTRUST/DELTRUST

2008-11-25  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: call run function instead of using
	pyrun_simplestring. Set global info for simple reply() to have what it
	needs to run.

	* src/modpython.py: new name as - interferes with module loading.
	added reply() function

2008-11-22  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: Added ability to query info about nick or channel
	name

2008-11-16  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: filled in some missing pieces.

	* src/mod-python.py: more demo code for testing

2008-11-16  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.help: Minor mistake in help for 'SET MAXSETINFO'

2008-11-16  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: further work on building basic bits of this

	* src/mod-python.py: first pass at what will be the base python script.

2008-11-13  Alex Schumann  <rubin@afternet.org>

	* src/modcmd.c: remove python tests (moved to mod-python.c)

	* src/mod-python.c: initial template based on memoserv

2008-11-12  Matthew Beeching  <jobe@mdbnet.co.uk>

	* tools/db.php: Added sample DB parser script

2008-11-06  Alex Schumann  <rubin@afternet.org>

	* src/modcmd.c,Makefile.in,src/Makefile.in,configure.in,src/config.h.in:
	Begin work on embedding python.

2008-11-06  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Fixes for SGLINE and SSHUN. As well as a fix for
	bug 2173687 (PRIVS part of it is already fixed on trunk).

2008-10-24  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.help: Minor spelling mistake "change" instead of
	"change"

2008-10-10  Matthew Beeching  <jobe@mdbnet.co.uk>
